--- a/styles/sass/_button.scss
+++ b/styles/sass/_button.scss
@@ -2,9 +2,7 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  position: relative;
   background: #f2f3f7;
   box-shadow: -6.8px -6.8px 18.1333px #ffffff, 6.8px 6.8px 18.1333px #becde2;
 
@@ -13,8 +11,10 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: transform 0.01s ease, color 0.5s ease;
   }
 
+  transition: all 0.01s ease;
   cursor: pointer;
 }
 
@@ -23,16 +23,45 @@
   height: 60px;
   border-radius: 50%;
   background: #f2f3f7;
-
-  position: absolute;
-  top: 30%;
-  left: 50%;
   /* Inner shadow / Input Form */
+  transform: translateY(3%);
   box-shadow: inset -5px -5px 30px #ffffff,
-    inset 4px 4px 8px rgba(190, 205, 226, 0.5), -6.8px -6.8px 18.1333px #ffffff,
-    6.8px 6.8px 18.1333px #becde2;
+    inset 4px 4px 8px rgba(190, 205, 226, 0.5), -4px -4px 18.1333px #ffffff,
+    4px 4px 18.1333px #becde2;
 }
 
+.text-active {
+  transform: scale(0.9) translate(-53%, -53%);
+  color: #8c94a0c5;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
+//////////
+/// Layout
+.btn-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+
+  &__left {
+    display: grid;
+    grid-template-columns: 45% 45%;
+    gap: 10%;
+    align-self: center;
+  }
+
+  &__right {
+    display: grid;
+    grid-template-columns: 45% 45%;
+    grid-template-rows: 45% 45%;
+    gap: 10%;
+  }
+}
+
+//////
+//base
 * {
   box-sizing: border-box;
   margin: 0;
@@ -40,7 +69,13 @@
 }
 
 body {
-  background-color: #eee;
+  background-color: #ccc;
+
+  height: 100vh;
+  width: 100%;
+
+  padding: 1rem;
+
   font-family: 'Roboto', sans-serif;
   font-family: Roboto;
   font-style: normal;
@@ -51,4 +86,35 @@ body {
   /* identical to box height, or 146% */
 
   color: #8c94a0;
+}
+
+////
+// LAYOUT
+
+.wrapper {
+  height: 100%;
+  background: #f2f3f7;
+  box-shadow: -6.8px -6.8px 18.1333px #ffffff, 6.8px 6.8px 18.1333px #becde2;
+  border-radius: 10px;
+
+  display: grid;
+  grid-template-rows: 15vh 40vh 25vh;
+  justify-content: center;
+  align-content: center;
+}
+
+/////
+// pandeiro
+.img-container {
+  .img {
+    filter: grayscale(100%) drop-shadow(40px 50px 4px rgba(0, 0, 0, 0.25));
+    // box-shadow: 40px 50px 4px rgba(0, 0, 0, 0.25);
+    // text-shadow: 40px 50px 4px rgba(0, 0, 0, 0.25);
+    transform: rotate(-14.5deg);
+    transition: all 0.1s ease;
+  }
+}
+
+.pandeiro-active {
+  transform: rotate(-6.5deg) !important;
 }
