--- a/styles/sass/_button.scss
+++ b/styles/sass/_button.scss
@@ -1,6 +1,6 @@
 .btn {
-  width: 60px;
-  height: 60px;
+  width: 62px;
+  height: 62px;
   border-radius: 50%;
   position: relative;
   background: #f2f3f7;
@@ -12,6 +12,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     transition: transform 0.01s ease, color 0.5s ease;
+    pointer-events: none;
   }
 
   transition: all 0.01s ease;
@@ -19,10 +20,6 @@
 }
 
 .btn-active {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  background: #f2f3f7;
   /* Inner shadow / Input Form */
   transform: translateY(3%);
   box-shadow: inset -5px -5px 30px #ffffff,
@@ -43,12 +40,12 @@
 .btn-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
+  gap: 3.2rem;
 
   &__left {
     display: grid;
     grid-template-columns: 45% 45%;
-    gap: 10%;
+    gap: 20%;
     align-self: center;
   }
 
@@ -56,7 +53,7 @@
     display: grid;
     grid-template-columns: 45% 45%;
     grid-template-rows: 45% 45%;
-    gap: 10%;
+    gap: 20%;
   }
 }
 
@@ -73,9 +70,7 @@ body {
 
   height: 100vh;
   width: 100%;
-
-  padding: 1rem;
-
+  padding: 0.5rem;
   font-family: 'Roboto', sans-serif;
   font-family: Roboto;
   font-style: normal;
@@ -93,8 +88,9 @@ body {
 
 .wrapper {
   height: 100%;
+  width: 100%;
   background: #f2f3f7;
-  box-shadow: -6.8px -6.8px 18.1333px #ffffff, 6.8px 6.8px 18.1333px #becde2;
+  box-shadow: -1px -1px 8px #ffffff, 1px 1px 8px #becde2;
   border-radius: 10px;
 
   display: grid;
@@ -106,6 +102,7 @@ body {
 /////
 // pandeiro
 .img-container {
+  margin: 0 auto;
   .img {
     filter: grayscale(100%) drop-shadow(40px 50px 4px rgba(0, 0, 0, 0.25));
     // box-shadow: 40px 50px 4px rgba(0, 0, 0, 0.25);
