--- a/styles/main.css
+++ b/styles/main.css
@@ -6,8 +6,8 @@
   background: #f2f3f7;
   -webkit-box-shadow: -6.8px -6.8px 18.1333px #ffffff, 6.8px 6.8px 18.1333px #becde2;
           box-shadow: -6.8px -6.8px 18.1333px #ffffff, 6.8px 6.8px 18.1333px #becde2;
-  -webkit-transition: all 0.01s ease;
-  transition: all 0.01s ease;
+  -webkit-transition: all 0.01s;
+  transition: all 0.01s;
   cursor: pointer;
 }
 
@@ -17,11 +17,11 @@
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  -webkit-transition: color 0.5s ease, -webkit-transform 0.01s ease;
-  transition: color 0.5s ease, -webkit-transform 0.01s ease;
-  transition: transform 0.01s ease, color 0.5s ease;
-  transition: transform 0.01s ease, color 0.5s ease, -webkit-transform 0.01s ease;
   pointer-events: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .btn-active {
@@ -30,15 +30,6 @@
           transform: translateY(3%);
   -webkit-box-shadow: inset -5px -5px 30px #ffffff, inset 4px 4px 8px rgba(190, 205, 226, 0.5), -4px -4px 18.1333px #ffffff, 4px 4px 18.1333px #becde2;
           box-shadow: inset -5px -5px 30px #ffffff, inset 4px 4px 8px rgba(190, 205, 226, 0.5), -4px -4px 18.1333px #ffffff, 4px 4px 18.1333px #becde2;
-}
-
-.text-active {
-  -webkit-transform: scale(0.9) translate(-53%, -53%);
-          transform: scale(0.9) translate(-53%, -53%);
-  color: #8c94a0c5;
-  position: absolute;
-  top: 50%;
-  left: 50%;
 }
 
 .btn-container {
@@ -66,7 +57,7 @@
       grid-template-columns: 45% 45%;
   -ms-grid-rows: 45% 45%;
       grid-template-rows: 45% 45%;
-  gap: 20%;
+  gap: 5% 25%;
 }
 
 * {
@@ -92,6 +83,7 @@ body {
 }
 
 .wrapper {
+  padding-top: 2rem;
   height: 100%;
   width: 100%;
   background: #f2f3f7;
@@ -100,8 +92,8 @@ body {
   border-radius: 10px;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 15vh 40vh 25vh;
-      grid-template-rows: 15vh 40vh 25vh;
+  -ms-grid-rows: 40vh 25vh;
+      grid-template-rows: 40vh 25vh;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -125,5 +117,103 @@ body {
 .pandeiro-active {
   -webkit-transform: rotate(-6.5deg) !important;
           transform: rotate(-6.5deg) !important;
+}
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 10vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 2rem;
+}
+
+.header .instructions {
+  color: rgba(80, 109, 152, 0.76);
+  font-size: 1.2rem;
+  font-weight: 300;
+  line-height: 1;
+  margin-bottom: 10px;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.logo-container {
+  max-width: 7rem;
+}
+
+.logo-container img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.85);
+  color: rgba(80, 109, 152, 0.76);
+}
+
+.modal .modal-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  width: 80%;
+  border-radius: 10px;
+  padding: 1rem;
+  background-color: #f2f3f7;
+  z-index: 1000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.modal .modal-container p {
+  font-size: 1.2rem;
+  font-weight: 300;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+
+.modal .modal-container .exit {
+  position: absolute;
+  top: 0;
+  right: 1rem;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 /*# sourceMappingURL=main.css.map */
