--- a/styles/sass/_button.scss
+++ b/styles/sass/_button.scss
@@ -1,3 +1,5 @@
+// color: rgba(80, 109, 152, 0.76);
+
 .btn {
   width: 62px;
   height: 62px;
@@ -5,18 +7,17 @@
   position: relative;
   background: #f2f3f7;
   box-shadow: -6.8px -6.8px 18.1333px #ffffff, 6.8px 6.8px 18.1333px #becde2;
+  transition: all 0.01s;
+  cursor: pointer;
 
   &__text {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    transition: transform 0.01s ease, color 0.5s ease;
     pointer-events: none;
+    user-select: none;
   }
-
-  transition: all 0.01s ease;
-  cursor: pointer;
 }
 
 .btn-active {
@@ -25,14 +26,6 @@
   box-shadow: inset -5px -5px 30px #ffffff,
     inset 4px 4px 8px rgba(190, 205, 226, 0.5), -4px -4px 18.1333px #ffffff,
     4px 4px 18.1333px #becde2;
-}
-
-.text-active {
-  transform: scale(0.9) translate(-53%, -53%);
-  color: #8c94a0c5;
-  position: absolute;
-  top: 50%;
-  left: 50%;
 }
 
 //////////
@@ -53,7 +46,7 @@
     display: grid;
     grid-template-columns: 45% 45%;
     grid-template-rows: 45% 45%;
-    gap: 20%;
+    gap: 5% 25%;
   }
 }
 
@@ -87,6 +80,7 @@ body {
 // LAYOUT
 
 .wrapper {
+  padding-top: 2rem;
   height: 100%;
   width: 100%;
   background: #f2f3f7;
@@ -94,7 +88,7 @@ body {
   border-radius: 10px;
 
   display: grid;
-  grid-template-rows: 15vh 40vh 25vh;
+  grid-template-rows: 40vh 25vh;
   justify-content: center;
   align-content: center;
 }
@@ -114,4 +108,88 @@ body {
 
 .pandeiro-active {
   transform: rotate(-6.5deg) !important;
+}
+
+///////////
+/// HEADER
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 10vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 2rem;
+
+  .instructions {
+    color: rgba(80, 109, 152, 0.76);
+    font-size: 1.2rem;
+    font-weight: 300;
+    line-height: 1;
+    margin-bottom: 10px;
+    cursor: pointer;
+    user-select: none;
+  }
+}
+
+.logo-container {
+  max-width: 7rem;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+////////////
+/// Modal
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(#fff, 0.85);
+
+  color: rgba(80, 109, 152, 0.76);
+
+  .modal-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    height: max-content;
+    width: 80%;
+    border-radius: 10px;
+    padding: 1rem;
+
+    background-color: #f2f3f7;
+
+    z-index: 1000;
+
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+
+    p {
+      font-size: 1.2rem;
+      font-weight: 300;
+      align-self: flex-start;
+    }
+    .exit {
+      position: absolute;
+      top: 0;
+      right: 1rem;
+      cursor: pointer;
+      user-select: none;
+    }
+  }
 }
