--- a/styles/main.css
+++ b/styles/main.css
@@ -179,7 +179,9 @@ body {
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
-  width: 80%;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
   border-radius: 10px;
   padding: 1rem;
   background-color: #f2f3f7;
