--- a/styles/sass/_button.scss
+++ b/styles/sass/_button.scss
@@ -165,7 +165,7 @@ body {
     transform: translate(-50%, -50%);
 
     height: max-content;
-    width: 80%;
+    width: max-content;
     border-radius: 10px;
     padding: 1rem;
 
