--- a/styles/main.css
+++ b/styles/main.css
@@ -27,6 +27,19 @@ h1 {
   margin-top: 2rem;
 }
 
+@media screen and (max-width: 900px) {
+  h1 {
+    font-size: 3rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 2.5rem;
+    margin-bottom: -1rem;
+  }
+}
+
 .section-loop {
   width: 80%;
   height: -webkit-max-content;
@@ -38,6 +51,7 @@ h1 {
 .section-loop .pandeiro {
   background-color: #e5e5e5;
   padding: 1rem 1rem 0.5rem 1rem;
+  border-radius: 10px;
 }
 
 .section-loop h3 {
@@ -46,20 +60,60 @@ h1 {
   font-weight: 400;
 }
 
+@media screen and (max-width: 900px) {
+  .section-loop h3 {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .section-loop h3 {
+    grid-row: span 2;
+  }
+}
+
 .section-loop .btn-wrapper {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (8rem)[auto-fit];
-      grid-template-columns: repeat(auto-fit, 8rem);
+  -ms-grid-columns: 81px (1fr)[8];
+      grid-template-columns: 81px repeat(8, 1fr);
+  gap: 1rem;
   place-items: center start;
   margin-bottom: 1rem;
+  position: relative;
+}
+
+.section-loop .btn-wrapper:not(:last-child) {
+  margin-bottom: 2rem;
+}
+
+@media screen and (max-width: 900px) {
+  .section-loop .btn-wrapper {
+    -ms-grid-columns: 70px (1fr)[8];
+        grid-template-columns: 70px repeat(8, 1fr);
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .section-loop .btn-wrapper {
+    -ms-grid-columns: 70px (1fr)[4];
+        grid-template-columns: 70px repeat(4, 1fr);
+  }
+  .section-loop .btn-wrapper:not(:last-child)::after {
+    content: '';
+    position: absolute;
+    bottom: -1rem;
+    right: 0;
+    left: 0;
+    height: 2px;
+    background-color: rgba(108, 121, 141, 0.2);
+  }
 }
 
 .section-loop .input {
-  height: 3rem;
-  width: 3rem;
+  height: 5vw;
+  width: 5vw;
   background-color: #e5e5e5;
-  margin-left: 1rem;
   border-radius: 8px;
   -webkit-box-shadow: 3px 3px 8px rgba(170, 170, 170, 0.52), -1px -1px 8px rgba(51, 51, 51, 0.25);
           box-shadow: 3px 3px 8px rgba(170, 170, 170, 0.52), -1px -1px 8px rgba(51, 51, 51, 0.25);
@@ -72,8 +126,15 @@ h1 {
           user-select: none;
 }
 
+@media screen and (max-width: 700px) {
+  .section-loop .input {
+    height: 8vw;
+    width: 8vw;
+  }
+}
+
 .section-loop .checked {
-  background: #a8cbff;
+  background: #b48e98;
   -webkit-box-shadow: 4px 4px 8px rgba(255, 255, 255, 0.36), -4px -4px 8px rgba(255, 255, 255, 0.36);
           box-shadow: 4px 4px 8px rgba(255, 255, 255, 0.36), -4px -4px 8px rgba(255, 255, 255, 0.36);
 }
@@ -97,6 +158,7 @@ h1 {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
+  border-radius: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -113,7 +175,7 @@ h1 {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  width: 12.5rem;
+  width: 20vw;
   height: 0.2rem;
   border-radius: 100px;
   margin: 0 1rem;
@@ -151,8 +213,10 @@ h1 {
 
 .play {
   margin-top: 1rem;
-  height: 4rem;
-  width: 4rem;
+  height: 12vw;
+  width: 12vw;
+  max-height: 5rem;
+  max-width: 5rem;
   background-color: transparent;
   border: 0.25rem solid #e5e5e5;
   border-radius: 50%;
@@ -186,14 +250,17 @@ h1 {
   background-image: url("../img/pause.svg") !important;
   top: 50% !important;
   left: 53% !important;
+  background-size: contain;
 }
 
 .symbol {
   background-image: url("../img/play.svg");
   background-size: contain;
   background-repeat: no-repeat;
-  height: 1.5rem;
-  width: 1.5rem;
+  height: 9vw;
+  width: 9vw;
+  max-height: 1.5rem;
+  max-width: 1.5rem;
   position: absolute;
   top: 50%;
   left: 55%;
